--- a/index.html
+++ b/index.html
@@ -8029,7 +8029,7 @@
         <section class="hero-section">
             <div class="container">
                 <h1>Agents IA pour les professionnels de sant&eacute;</h1>
-                <p class="subtitle">Accurcare &mdash; L'intelligence artificielle au service du soin</p>
+                <p class="subtitle">Hack Your Care &mdash; L'intelligence artificielle au service du soin</p>
                 <p>
                     L'IA ne remplace pas le soignant. Elle l'augmente.
                     Dans un secteur o&ugrave; le temps manque, o&ugrave; les d&eacute;marches administratives s'accumulent et o&ugrave;
@@ -8038,7 +8038,7 @@
                 </p>
                 <div class="highlight-box">
                     <p>
-                        <strong>Accurcare</strong> combine expertise en sant&eacute; et ma&icirc;trise de l'IA pour cr&eacute;er
+                        <strong>Hack Your Care</strong> combine expertise en sant&eacute; et ma&icirc;trise de l'IA pour cr&eacute;er
                         des outils concrets, imm&eacute;diatement actionnables. Nos agents IA sont con&ccedil;us par des professionnels
                         qui comprennent vos contraintes r&eacute;glementaires, vos enjeux &eacute;thiques et votre r&eacute;alit&eacute; terrain.
                     </p>
@@ -8342,12 +8342,12 @@
             <!-- SECTION : DIFFÉRENCIATION -->
             <div class="content-section">
                 <div class="content-card">
-                    <h3>Agent g&eacute;n&eacute;rique vs Agent Accurcare</h3>
+                    <h3>Agent g&eacute;n&eacute;rique vs Agent Hack Your Care</h3>
                     <div class="comparison-table">
                         <div class="comparison-row comparison-header">
                             <div class="comparison-cell"></div>
                             <div class="comparison-cell">ChatGPT g&eacute;n&eacute;rique</div>
-                            <div class="comparison-cell highlight">Agent Accurcare</div>
+                            <div class="comparison-cell highlight">Agent Hack Your Care</div>
                         </div>
                         <div class="comparison-row">
                             <div class="comparison-cell label">Connaissance sant&eacute;</div>
